# MLOPS_part2

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  steps.txt
.dvc/: config  steps.txt
code_repo/: __init__.py  dataset.py  features.py  pipeline_01_data_preparation.py  plots.py
code_repo/config/: params.yaml  schema_training.json
code_repo/modeling/: predict.py  train.py
config/: schema_prediction.json  schema_training.json
docs/: mkdocs.yml
docs/docs/: index.md
